--- a/portfolio-one/angular.json
+++ b/portfolio-one/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -120,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "portfolio-one"
+  "defaultProject": "portfolio-one",
+  "cli": {
+    "analytics": false
+  }
 }
